--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,21 @@
-sudo: false
 language: ruby
+
 rvm:
+  - 2.1.10
+  - 2.2.8
+  - 2.3.5
   - 2.4.2
-before_install: gem install bundler -v 1.16.0
+  - ruby-head
+
+gemfile:
+  - Gemfile
+  - gemfiles/Gemfile.rails-5.0-stable
+
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+
+sudo: false
+
+before_install: "rm ${BUNDLE_GEMFILE}.lock"
+before_script: 'bundle update'
