--- a/.travis.yml
+++ b/.travis.yml
@@ -9,19 +9,25 @@ rvm:
 
 gemfile:
   - Gemfile
+  - gemfiles/Gemfile.rails-4.1-stable
   - gemfiles/Gemfile.rails-4.2-stable
   - gemfiles/Gemfile.rails-5.0-stable
 
 matrix:
   exclude:
     - rvm: 2.1.10
-      gemfile: gemfiles/Gemfile.rails-5.0-stable
-    - rvm: 2.1.10
       gemfile: Gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/Gemfile.rails-5.0-stable
+    - rvm: 2.4.2
+      gemfile: gemfiles/Gemfile.rails-4.1-stable
+    - rvm: ruby-head
+      gemfile: gemfiles/Gemfile.rails-4.1-stable
   allow_failures:
     - rvm: ruby-head
 
 sudo: false
 
 before_install: "rm ${BUNDLE_GEMFILE}.lock"
+
 before_script: 'bundle update'
