--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ rvm:
   - 2.3.5
   - 2.4.2
   - 2.5.0
+  - 2.6.5
   - ruby-head
 
 gemfile:
@@ -13,6 +14,7 @@ gemfile:
   - gemfiles/Gemfile.rails-4.1-stable
   - gemfiles/Gemfile.rails-4.2-stable
   - gemfiles/Gemfile.rails-5.0-stable
+  - gemfiles/Gemfile.rails-5.1-stable
 
 matrix:
   exclude:
@@ -23,6 +25,8 @@ matrix:
     - rvm: 2.4.2
       gemfile: gemfiles/Gemfile.rails-4.1-stable
     - rvm: 2.5.0
+      gemfile: gemfiles/Gemfile.rails-4.1-stable
+    - rvm: 2.6.5
       gemfile: gemfiles/Gemfile.rails-4.1-stable
     - rvm: ruby-head
       gemfile: gemfiles/Gemfile.rails-4.1-stable
