--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,7 @@ sudo: false
 before_install:
   - "rm ${BUNDLE_GEMFILE}.lock"
   - gem update --system
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v '< 2'
 
 before_script: 'bundle update'
