--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ sudo: false
 
 before_install:
   - "rm ${BUNDLE_GEMFILE}.lock"
-  - gem update --system
+  - gem update --system '2.7.8' --no-document
   - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
   - gem install bundler -v '< 2'
 
