--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ rvm:
   - 2.4.2
   - 2.5.0
   - 2.6.5
-  - ruby-head
 
 gemfile:
   - Gemfile
@@ -23,8 +22,8 @@ matrix:
       gemfile: gemfiles/Gemfile.rails-4.1-stable
     - rvm: 2.6.5
       gemfile: gemfiles/Gemfile.rails-4.1-stable
-    - rvm: ruby-head
-      gemfile: gemfiles/Gemfile.rails-4.1-stable
+    - rvm: 2.6.5
+      gemfile: gemfiles/Gemfile.rails-4.2-stable
   allow_failures:
     - rvm: ruby-head
 
